; ModuleID = '/home/carl/AnghaBench/macvim/src/extr_regexp.c_getoctchrs.c'
source_filename = "/home/carl/AnghaBench/macvim/src/extr_regexp.c_getoctchrs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@regparse = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @getoctchrs to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @getoctchrs() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 0, i32* %2, align 4
  store i32 0, i32* %4, align 4
  br label %5

5:                                                ; preds = %32, %0
  %6 = load i32, i32* %4, align 4
  %7 = icmp slt i32 %6, 3
  br i1 %7, label %8, label %11

8:                                                ; preds = %5
  %9 = load i32, i32* %2, align 4
  %10 = icmp slt i32 %9, 32
  br label %11

11:                                               ; preds = %8, %5
  %12 = phi i1 [ false, %5 ], [ %10, %8 ]
  br i1 %12, label %13, label %35

13:                                               ; preds = %11
  %14 = load i32*, i32** @regparse, align 8
  %15 = getelementptr inbounds i32, i32* %14, i64 0
  %16 = load i32, i32* %15, align 4
  store i32 %16, i32* %3, align 4
  %17 = load i32, i32* %3, align 4
  %18 = icmp slt i32 %17, 48
  br i1 %18, label %22, label %19

19:                                               ; preds = %13
  %20 = load i32, i32* %3, align 4
  %21 = icmp sgt i32 %20, 55
  br i1 %21, label %22, label %23

22:                                               ; preds = %19, %13
  br label %35

23:                                               ; preds = %19
  %24 = load i32, i32* %2, align 4
  %25 = shl i32 %24, 3
  store i32 %25, i32* %2, align 4
  %26 = load i32, i32* %3, align 4
  %27 = call i32 @hex2nr(i32 %26)
  %28 = load i32, i32* %2, align 4
  %29 = or i32 %28, %27
  store i32 %29, i32* %2, align 4
  %30 = load i32*, i32** @regparse, align 8
  %31 = getelementptr inbounds i32, i32* %30, i32 1
  store i32* %31, i32** @regparse, align 8
  br label %32

32:                                               ; preds = %23
  %33 = load i32, i32* %4, align 4
  %34 = add nsw i32 %33, 1
  store i32 %34, i32* %4, align 4
  br label %5

35:                                               ; preds = %22, %11
  %36 = load i32, i32* %4, align 4
  %37 = icmp eq i32 %36, 0
  br i1 %37, label %38, label %39

38:                                               ; preds = %35
  store i32 -1, i32* %1, align 4
  br label %41

39:                                               ; preds = %35
  %40 = load i32, i32* %2, align 4
  store i32 %40, i32* %1, align 4
  br label %41

41:                                               ; preds = %39, %38
  %42 = load i32, i32* %1, align 4
  ret i32 %42
}

declare dso_local i32 @hex2nr(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
